[gd_scene load_steps=3 format=3 uid="uid://d1wcx54gge80y"]

[ext_resource type="Script" path="res://scripts/homing_enemies.gd" id="1_wafhg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0teca"]
radius = 348.0

[node name="EnemyHomingComponent" type="Area2D"]
script = ExtResource("1_wafhg")

[node name="SightRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0teca")
debug_color = Color(0.870588, 0.972549, 1, 0)

[node name="CheckForIsHomingDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.02

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CheckForIsHomingDelay" to="." method="_on_check_for_is_homing_delay_timeout"]
